tests/ui/async-await/edition-deny-async-fns-2015.stderr
error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:3:1
   |
LL | async fn foo() {}
   | ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:5:12
   |
LL | fn baz() { async fn foo() {} }
   |            ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:7:1
   |
LL | async fn async_baz() {
   | ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:8:5
   |
LL |     async fn bar() {}
   |     ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:14:5
   |
LL |     async fn foo() {}
   |     ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:18:5
   |
LL |     async fn foo() {}
   |     ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:35:9
   |
LL |         async fn bar() {}
   |         ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:25:9
   |
LL |         async fn foo() {}
   |         ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error[E0670]: `async fn` is not permitted in Rust 2015
  --> $DIR/edition-deny-async-fns-2015.rs:30:13
   |
LL |             async fn bar() {}
   |             ^^^^^ to use `async fn`, switch to Rust 2018 or later
   |
   = help: pass `--edition 2024` to `rustc`
   = note: for more on editions, read https://doc.rust-lang.org/edition-guide

error: aborting due to 9 previous errors

For more information about this error, try `rustc --explain E0670`.
